@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19910712
+MANIFEST for ded, version t19910715
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
